crates/veritool-core/tests/snapshots/snapshot_tests__snap_top_with_subs_instances.snap
---
source: crates/veritool-core/tests/snapshot_tests.rs
assertion_line: 41
expression: "&top.instances"
---
[
  {
    "inst_name": "u_alu",
    "module_ref": "alu",
    "param_overrides": []
  },
  {
    "inst_name": "u_rf",
    "module_ref": "reg_file",
    "param_overrides": []
  }
]
